--- a/GymSpot/Areas/Client/Views/Shared/_Layout.cshtml
+++ b/GymSpot/Areas/Client/Views/Shared/_Layout.cshtml
@@ -20,7 +20,7 @@
                     <a asp-controller="Home" asp-action="Index" asp-area="Client">Home page</a>
                 </li>
                 <li>
-                    <a asp-controller="Home" asp-action="AccountDetails" asp-area="Client">Personal Details</a>
+                    <a asp-controller="AccountDetails" asp-action="Index" asp-area="Client">Personal Details</a>
                 </li>
                 <li>
                     <a asp-controller="ExerciseItem" asp-action="Index" asp-area="Client">Exercises</a>
