--- a/GymSpot/Areas/Client/Views/Home/Index.cshtml
+++ b/GymSpot/Areas/Client/Views/Home/Index.cshtml
@@ -4,16 +4,25 @@
 
 <h1>Home</h1>
 <p>Welcome to the home page</p>
-
-<div class="box flex">
-    <div class="flex-1">Start training!</div>
-</div>
-<div class="box flex">
-    <div class="flex-1">Training history</div>
-</div>
-<div class="box flex">
-    <div class="flex-1">Find a personal trainer</div>
-</div>
-<div class="box flex">
-    <div class="flex-1">Add a new routine</div>
+<div>
+    <a href="/Client/AccountDetails" style="text-decoration: none; color: inherit" >
+        <div class="box flex div-hover">
+            <div class="flex-1" >Start training!</div>
+        </div>
+    </a>
+    <a href="/Client/AccountDetails" style="text-decoration: none; color: inherit">
+        <div class="box flex div-hover">
+            <div class="flex-1">Training history</div>
+        </div>
+    </a>
+    <a href="/Client/AccountDetails" style="text-decoration: none; color: inherit">
+        <div class="box flex div-hover">
+            <div class="flex-1">Find a personal trainer</div>
+        </div>
+    </a>
+    <a href="/Client/AccountDetails" style="text-decoration: none; color: inherit">
+        <div class="box flex div-hover">
+            <div class="flex-1">Add a new routine</div>
+        </div>
+    </a>
 </div>
