Updated User database

--- a/GymSpot/Areas/Client/Views/AccountDetails/Index.cshtml
+++ b/GymSpot/Areas/Client/Views/AccountDetails/Index.cshtml
@@ -5,6 +5,7 @@
 }
 <h1>Exercise Item List</h1>
 <div class="box">
+    <a asp-controller="AccountDetails" asp-action="Edit" asp-route-id="@Model.UserId" asp-area="Client">EDIT</a>
     <div class="list-container">
         <h1>Personal Details</h1>
         <ul class="list">
